--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite Boilerplate</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Me Avalia</title>
   </head>
   <body>
     <div data-js="root"></div>
